--- a/src/App.css
+++ b/src/App.css
@@ -98,7 +98,7 @@ avatar:hover {
 }
 
 #bt {
-  background-color: #3a332b;
+  background-color: antiquewhite;
   position: absolute;
   left: 0;
   top: 9%;
